--- a/sass/_scroll-component-controls.scss
+++ b/sass/_scroll-component-controls.scss
@@ -8,8 +8,14 @@ $comp-color: #617b99;
     align-self: center;
     display: flex;
     justify-content: space-between;
-    margin-top: -0px;
+    margin-top: -450px;
     //justify-self: center;
+}
+
+@media only screen and (max-width: 480px) {
+    .slide-scroll-controls-container {
+        margin-top: 0px;
+    }  
 }
 
 .side-scroll-controls-bar {
