--- a/sass/_scroll-component.scss
+++ b/sass/_scroll-component.scss
@@ -100,7 +100,7 @@ img {
 
     .slide-scroll-component {
         margin-top: 50px;
-        height: 500px;        
+        height: 1000px;        
     }
 
 }
